# Senial_SOLID_IS_FIUNER

./: .gitignore  CHANGELOG.md  README.md  REQUERIMIENTOS.md  configurador.py  lanzador.py  setup.py
adquisicion_senial/: README.md  __init__.py  adquisidor.py  factory_adquisidor.py  setup.py
configurador/: README.md  __init__.py  cargador_config.py  configurador.py  setup.py
configurador/ejemplos/: README.md  config-01-lista-archivo-amplificador.json  config-02-pila-senoidal-umbral.json  config-03-cola-senoidal-amplificador-mixto.json  config-04-lista-cola-archivo-umbral.json  config-05-pila-senoidal-amplificador.json  config-06-cola-archivo-umbral-mixto.json
dominio_senial/: README.md  __init__.py  factory_senial.py  fuente_senial.py  senial.py  setup.py
install/: install.bat  install.sh  verify_installation.py
lanzador/: README.md  __init__.py  lanzador.py  setup.py
packaging/metapackage/: MANIFEST.in  README.md  pyproject.toml  setup.py
packaging/metapackage/config/: config.json
packaging/metapackage/senial_solid_fiuner/: __init__.py
persistidor_senial/: README.md  __init__.py  contexto.py  factory_contexto.py  mapeador.py  persistidor.py  repositorio.py  setup.py
presentacion_senial/: README.md  __init__.py  setup.py  visualizador.py
procesamiento_senial/: README.md  __init__.py  factory_procesador.py  procesador.py  procesador_umbral.py  setup.py
senial_solid/: __init__.py  adquisidor.py  lector_senial.py  procesador.py  senial.py  visualizador.py
supervisor/: README.md  __init__.py  auditor.py  setup.py  trazador.py
